Fix analysis formatting: align values in lists and reduce heading whitespace

--- a/src/App.css
+++ b/src/App.css
@@ -398,7 +398,7 @@ input[type='file'] {
   color: #5029a7;
   font-size: 24px;
   margin-top: 24px;
-  margin-bottom: 16px;
+  margin-bottom: 8px;
   padding-bottom: 10px;
   border-bottom: 2px solid #5029a7;
   text-align: left;
@@ -410,7 +410,7 @@ input[type='file'] {
   color: #FE5000;
   font-size: 20px;
   margin-top: 24px;
-  margin-bottom: 16px;
+  margin-bottom: 8px;
   position: relative;
   display: block;
   text-align: left;
@@ -424,12 +424,13 @@ input[type='file'] {
   height: 2px;
   background-color: #FE5000;
   position: absolute;
-  bottom: -5px;
+  bottom: -3px;
   left: 0;
 }
 
 .analysis p {
   line-height: 1.6;
+  margin-top: 8px;
   margin-bottom: 16px;
   color: #333;
   font-size: 15px;
@@ -437,16 +438,32 @@ input[type='file'] {
 }
 
 .analysis ul, .analysis ol {
+  margin-top: 8px;
   margin-bottom: 20px;
   padding-left: 25px;
   text-align: left;
 }
 
 .analysis li {
-  margin-bottom: 12px;
+  margin-bottom: 8px;
   line-height: 1.5;
   text-align: left;
   position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.analysis li .value-span {
+  margin-left: 10px;
+  font-weight: bold;
+  white-space: nowrap;
+  text-align: left;
+  flex-shrink: 0;
+}
+
+.analysis ul.inline-values li {
+  justify-content: flex-start;
 }
 
 .analysis ul li {
@@ -460,6 +477,7 @@ input[type='file'] {
   font-weight: bold;
   position: absolute;
   left: -15px;
+  top: 1px;
 }
 
 .analysis ol {
@@ -469,6 +487,7 @@ input[type='file'] {
 .analysis ol li {
   list-style-type: none;
   counter-increment: item;
+  justify-content: flex-start;
 }
 
 .analysis ol li::before {
@@ -477,6 +496,7 @@ input[type='file'] {
   font-weight: bold;
   position: absolute;
   left: -20px;
+  top: 1px;
 }
 
 .results-display table {
